add google place api key, change design, #update

--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
 
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,700,700i|Raleway:300,400,500,700,800|Montserrat:300,400,700" rel="stylesheet">
-
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAH1AfAP3OFNhxe0ri_TJKcz-Gg7byFmog&libraries=places"></script>
+    
     <!-- Bootstrap CSS File -->
     <link href="/static/lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
@@ -27,7 +28,7 @@
     <!-- Main Stylesheet File -->
     <link href="/static/css/style.css" rel="stylesheet">
 
-    <title>conversionfunnel</title>
+    <title>Downpaymentlookup</title>
   </head>
   <body id="body">
     <div id="app"></div>
@@ -47,7 +48,7 @@
     <script src="/static/lib/owlcarousel/owl.carousel.min.js"></script>
     <script src="/static/lib/magnific-popup/magnific-popup.min.js"></script>
     <script src="/static/lib/sticky/sticky.js"></script>
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD8HeI8o-c1NppZA-92oYlXakhDPYR7XMY&libraries=places"></script>
+    
 
     <!-- Template Main Javascript File -->
     <script src="/static/js/main.js"></script>
